# Iquity

./: .gitignore  Cargo.toml  InstallNotes.md  InstallNotes.sh  README.md  TODO.md
docs/: .iquity_config.toml
docs/.iquity/: config.toml
frontend/: Cargo.toml  Trunk.toml  bun.lockb  index.html  package.json  tailwind.config.js
frontend/css/: input.css  output.css
frontend/src/: local_config.rs  main.rs  utils.rs
frontend/src/components/: container.rs  divider.rs  drawer.rs  dual_view.rs  footer.rs  help.rs  markdown_preview.rs  mod.rs  notification.rs  pdf.rs  single_view.rs  theme_card.rs  toasts.rs  tooltip.rs  welcome_hero.rs  which_slide.rs
frontend/src/components/editor/: mod.rs
frontend/src/components/editor/header/: add.rs  bold.rs  font_decrease.rs  font_increase.rs  formatting.rs  header.rs  headings.rs  image.rs  italics.rs  link.rs  mod.rs  quote.rs  redo.rs  table.rs  undo.rs
frontend/src/components/editor/textarea/: mod.rs
frontend/src/components/header/: add_dropdown.rs  desktop.rs  mobile.rs  mod.rs  save_btn.rs
frontend/src/components/modals/: add_image.rs  add_link.rs  create_file.rs  file_name.rs  mod.rs  table.rs  utils.rs
frontend/src/contexts/: config.rs  markdown.rs  mod.rs  toasts.rs
frontend/src/icons/: mod.rs
frontend/src/pages/: about.rs  background.rs  home.rs  mod.rs  settings.rs  welcome.rs
frontend/src/tauri/: mod.rs
solid-frontend/: bun.lockb  package.json  tailwind.config.js
solid-frontend/src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/src/: main.rs  utils.rs
src-tauri/src/utils/: code_syntax_highlight.rs
ubi-crates/config/: Cargo.toml
ubi-crates/config/src/: error.rs  lib.rs
ubi-crates/error/src/: lib.rs
ubi-crates/md/src/: lib.rs
ubi-crates/mdtg/: Cargo.toml
ubi-crates/mdtg/src/: gen.rs  lib.rs  parse.rs
