[workspace]
members = ["src-tauri", "frontend", "ubi-crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Stephen Power","mahmoud eltahawy"]
description = "A cross-platform markdown compiler."
license = "GPL"
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies]
tokio = { version = "1.38.1", features = ["full"] }
ron = "0.8"
serde = { version = "^1", features = ["derive"] }
thiserror = "1.0.38"
dirs = "5.0.0"
markdown = "1.0.0-alpha.18"
config = { path = "./ubi-crates/config" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2" , features = ["core","event"] }
