[package]
name = "frontend"
version = { workspace = true }
edition = { workspace = true }

[features]
web = []
desktop = []
mobile = []

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[dependencies]
serde = { workspace = true }
config = { workspace = true }
web-sys = { version = "0.3.63", features=["DataTransfer", "Element", "Navigator", "HtmlAnchorElement", "HtmlButtonElement", "HtmlDialogElement", "Navigator", "Clipboard",
"HtmlDivElement", "HtmlDocument", "HtmlInputElement", "HtmlLabelElement", "HtmlTextAreaElement", "HtmlParagraphElement", "Event", "EventTarget", "MouseEvent", "InputEvent", "KeyEvent", "KeyboardEvent", "KeyboardEventInit",
"TouchEvent", "TouchList", "Touch", "DomTokenList"]}
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "=0.4.42"
js-sys = "0.3.69"
serde-wasm-bindgen = "0.5.0"

leptos = { version = "0.7.0-alpha", features = ["csr"] }
gloo = "0.11"
gloo-timers = { version = "0.3", features = ["futures"] }

tauri-sys = { workspace = true }

wasm-logger = "0.2.0"
futures = "0.3.30"
