[package]
name = "Ubiquity"
license = "GPL"
repository = ""
default-run = "Ubiquity"
edition = { workspace = true }
version = "0.4.0"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies.tauri]
version = "2.0.0-beta"
features = []

[dependencies]
serde = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }
error = { workspace = true }
md = { workspace = true }

rfd = "0.14.1"
tauri-plugin-clipboard-manager = "2.1.0-beta.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
