[package]
name = "iquity"
license = "GPL"
repository = ""
default-run = "iquity"
edition = { workspace = true }
version = "0.4.0"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies.tauri]
version = "2.0.0-beta"
features = []

[dependencies]
serde = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
config = { workspace = true }

tauri-plugin-clipboard-manager = "2.1.0-beta.6"
notify = "6.1.1"
futures = "0.3.30"
tokio = { version = "1.38.1", features = ["full"] }
serde_json = "1.0.120"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-beta.8"
