[package]
name = "iquity"
license = "GPL"
repository = ""
default-run = "iquity"
edition = { workspace = true }
version = "0.4.0"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies.tauri]
version = "2.0.0-rc"
features = []

[dependencies]
serde = { workspace = true }
config = { workspace = true ,features = ["server"] }
tokio = { workspace = true }
markdown = { workspace = true }
notify = "6.1.1"
futures = "0.3.30"
serde_json = "1.0.120"
tauri-plugin-notification = "2.0.0-rc"
rayon = "1.10.0"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
portpicker = "0.1.1"
syntect = "5.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-rc"
