[package]
name = "config"
version = "0.0.0"

authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true ,optional = true }
tokio = { workspace = true ,optional = true }
toml = { version = "0.8.15" ,optional = true}

[features]
server = [
  "dep:tokio",
  "dep:toml",
  "dep:dirs",
]
